fixed frontend element overflow

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -23,12 +23,23 @@ h4 {
   
   .div1 {
     grid-area: 1 / 1 / 2 / 2;
+    height: calc(100vh - 50px);
+    overflow-x: hidden;
+    overflow: auto;
   }
   .div2 {
     grid-area: 1 / 2 / 2 / 3;
+    height: calc(100vh - 50px);
+    overflow-x: hidden;
+    overflow: auto;
+    display: flex;
+    flex-direction: column-reverse;
   }
   .div3 {
     grid-area: 1 / 3 / 2 / 4;
+    height: calc(100vh - 50px);
+    overflow-x: hidden;
+    overflow: auto;
   }
   
   #messageform {
